@@ -1,3 +1,14 @@
+2001-09-15  James Henstridge  <james@daa.com.au>
+
+	* gtk/gtkmodule.c (init_gtk): add test use of add_constants.
+
+	* pygobject.h (_PyGObject_Functions): add new functions to header.
+
+	* gobjectmodule.c (pyg_enum_add_constants): new function for
+	adding constants to a module dictionary from a particular GType.
+	(pyg_flags_add_constants): similar for flag types.
+	(functions): add to export function vtable.
+
 2001-09-14  James Henstridge  <james@daa.com.au>
 
 	* pygtk-2.0.pc.in (defsdir): fix up defsdir definition.
